--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,4 +11,7 @@ name = "shamir-combine"
 
 [dependencies]
 clap = { version = "3.1.17", features = ["derive"] }
+num = "0.4.0"
+num-bigint = { version = "0.4.3", features = ["rand"] }
 rand = "0.8.5"
+
